--- a/app/index.html
+++ b/app/index.html
@@ -44,7 +44,7 @@
       <div class="jumbotron">
         <h1>The best music/artists you've never heard of/before</h1>
         <p class="lead">Enter your favourite musician</p>
-        <form action="">
+        <form action="" onsubmit="return false" ng-submit='artistInput()'>
           <input id="artistInput" type="text" placeholder="Enter artist name">
           <!-- <div ng-click="artistInput()">Search</div> -->
           <input type="button" value="Search" class="" ng-click="artistInput()">
@@ -52,7 +52,7 @@
       </div>
 
       <div class="row content">
-        <div class="col-lg-6">
+        <div class="col-lg-12">
           
         </div>
       </div>
