--- a/app/index.html
+++ b/app/index.html
@@ -53,7 +53,10 @@
 
       <div class="row content">
         <div class="col-lg-12">
-          
+<!--         <iframe width="100%" height="450" scrolling="no" frameborder="no" ng-src='{{ song }}',
+></iframe> -->
+          <!-- <p>{{song}}</p> -->
+          <suggestion></suggestion>
         </div>
       </div>
 
@@ -94,10 +97,12 @@
     <script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap/tab.js"></script>
     <!-- endbuild -->
     
+    <script src="scripts/soundcloud.js"></script>
     <!-- build:js scripts/main.js -->
     <script src="scripts/main.js"></script>
     <!-- endbuild -->
     <script src="scripts/controllers/MainController.js"></script>
+    <script src="scripts/directives/suggestion.js"></script>
 
   </body>
 </html>
