--- a/app/index.html
+++ b/app/index.html
@@ -43,7 +43,7 @@
 
       <div class="jumbotron">
         <h1>The best music/artists you've never heard of/before</h1>
-        <p class="lead">Enter your favourite musician</p>
+        <p class="lead">Enter your favourite popular musician</p>
         <form action="" onsubmit="return false" ng-submit='artistInput()'>
           <input id="artistInput" type="text" placeholder="Enter artist name">
           <!-- <div ng-click="artistInput()">Search</div> -->
@@ -53,9 +53,6 @@
 
       <div class="row content">
         <div class="col-lg-12">
-<!--         <iframe width="100%" height="450" scrolling="no" frameborder="no" ng-src='{{ song }}',
-></iframe> -->
-          <!-- <p>{{song}}</p> -->
           <suggestion></suggestion>
         </div>
       </div>
