--- a/app/index.html
+++ b/app/index.html
@@ -30,38 +30,34 @@
     <!--[if lt IE 10]>
       <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
-    
-    <div class="container" ng-controller="MainController">
-      <div class="header">
-        <ul class="nav nav-pills pull-right">
-          <li class="active"><a href="#">Home</a></li>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Contact</a></li>
-        </ul>
-        <h3 class="text-muted">underground sound</h3>
-      </div>
+    <div class="controller" ng-controller="MainController">
+      <div class="bg1">
+        <div class="container">
+          <div class="header">
+            <h3 class="text-muted">underground sound</h3>
+          </div>
 
-      <div class="jumbotron">
-        <h1>The best music/artists you've never heard of/before</h1>
-        <p class="lead">Enter your favourite popular musician</p>
-        <form action="" onsubmit="return false" ng-submit='artistInput()'>
-          <input id="artistInput" type="text" placeholder="Enter artist name">
-          <!-- <div ng-click="artistInput()">Search</div> -->
-          <input type="button" value="Search" class="" ng-click="artistInput()">
-        </form>
-      </div>
-
-      <div class="row content">
-        <div class="col-lg-12">
-          <suggestion></suggestion>
+          <div class="jumbotron">
+            <h1>The best music you've never heard</h1>
+            <p class="lead">Enter your favourite popular musician</p>
+            <form action="" onsubmit="return false" ng-submit='artistInput()'>
+              <input id="artistInput" type="text" placeholder="Enter artist name">
+              <a href="#suggestion"><input type="button" value="Search" class="" ng-click="artistInput()"></a>
+            </form>
+          </div>
         </div>
       </div>
-
-      <div class="footer">
-        <p><a href="http://adamkendal.ca">adamkendal.ca</a></p>
-        <p><a href="https://twitter.com/abkendal">@abkendal</a></p>
+      <div class="bg2" id="suggestion">
+        <div class="container">
+          <div class="row content">
+            <div class="col-lg-12 footer">
+              <suggestion></suggestion>
+            </div>
+          </div>
+          <footer class="footer"></footer>
+        </div>
       </div>
-    </div>
+  </div>
     
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
     <script>
@@ -100,6 +96,7 @@
     <!-- endbuild -->
     <script src="scripts/controllers/MainController.js"></script>
     <script src="scripts/directives/suggestion.js"></script>
+    <script src="scripts/directives/footer.js"></script>
 
   </body>
 </html>
