--- a/app/scripts/directives/suggestion.html
+++ b/app/scripts/directives/suggestion.html
@@ -1,3 +1,3 @@
-<p>{{suggestion.name}}</p>
+<a href="{{ suggestion.soundcloud }}"><h3>{{suggestion.name}}</h3></a>
 <iframe width="100%" height="450" scrolling="no" frameborder="no" ng-src='{{ suggestionUrl }}',
 ></iframe>
