Make enter press on input scroll to result

--- a/app/index.html
+++ b/app/index.html
@@ -38,11 +38,11 @@
           </div>
 
           <div class="jumbotron">
-            <h1>The best music you've never heard</h1>
+            <h1>The best new music you've never heard</h1>
             <p class="lead">Enter your favourite popular musician</p>
             <form action="" onsubmit="return false" ng-submit='artistInput()'>
               <input id="artistInput" type="text" placeholder="Enter artist name">
-              <a href="#suggestion"><input type="button" value="Search" class="" ng-click="artistInput()"></a>
+              <a href="#suggestion"><input id="artistButton" type="button" value="Search" class="" ng-click="artistInput()"></a>
             </form>
           </div>
         </div>
