--- a/app/index.html
+++ b/app/index.html
@@ -42,7 +42,7 @@
             <p class="lead">Enter your favourite popular musician</p>
             <form action="" onsubmit="return false" ng-submit='artistInput()'>
               <input id="artistInput" type="text" placeholder="Enter artist name">
-              <a href="#suggestion"><input id="artistButton" type="button" value="Search" class="" ng-click="artistInput()"></a>
+              <a href="#suggestion"><input id="artistButton" type="submit" value="Search" class="" ng-click="artistInput()"></a>
             </form>
           </div>
         </div>
@@ -54,6 +54,10 @@
               <suggestion></suggestion>
             </div>
           </div>
+        </div>
+      </div>
+      <div class="bg3">
+        <div class="container">
           <footer class="footer"></footer>
         </div>
       </div>
