--- a/app/scripts/directives/footer.html
+++ b/app/scripts/directives/footer.html
@@ -1,2 +1,3 @@
-<p><a href="http://adamkendal.ca">adamkendal.ca</a></p>
-<p><a href="https://twitter.com/abkendal">@abkendal</a></p>
+<div class="col-xs-12">
+	<p>Built by <a href="http://adamkendal.ca">Adam Kendal</a></p>
+</div>
