Style search button

--- a/app/index.html
+++ b/app/index.html
@@ -43,6 +43,7 @@
             <form action="" onsubmit="return false" ng-submit='artistInput()'>
               <input id="artistInput" type="text" placeholder="Enter artist name">
               <a href="#suggestion"><input id="artistButton" type="submit" value="Search" class="" ng-click="artistInput()"></a>
+              <!-- <a href="#suggestion"><input id="artistButton mobileBtn" type="submit" class="" ng-click="artistInput()"></a> -->
             </form>
           </div>
         </div>
